# green-ceramics

./: .env.example  .gitignore  admin.py  create_admin.py  index.html  main.py  pyproject.toml  render.yml  requirements.txt  seed_products.py  test.py  test_storage.py
assets/: style.css
components/: layout.py  product_card.py  session.py
config/: settings.py
db/: connection.py  init_db.py  models.py
db/migrations/: 001_initial.sql  002_seed.sql
pages/: catalog.py  product_detail.py
services/: auth.py  cart.py  emails.py  images.py  orders.py  payments.py  products.py  services.py  storage.py  tokens.py
static/: admin.css  admin.js  carrito.js  catalogo.js  cuenta.js  main.js  producto.js  style.css
templates/: carrito.html  catalogo.html  cuenta.html  index.html  pago_exitoso.html  pago_fallido.html  pago_pendiente,html  producto.html
templates/admin/: dashboard.html  login.html  ordenes.html  productos.html  settings.html  usuarios.html
